# template-workflow-data-extraction

./: .env.template.jinja  .gitignore  CONTRIBUTING.md  COPY_UTILS_NOTES.md  README.md  README.md.jinja  copier.yaml  deployment.yaml.jinja  llama_deploy.local.yaml.jinja  llama_deploy.yaml.jinja  pyproject.toml  pyproject.toml.jinja
.github/workflows/: check-regeneration.yml
configs/: config.json
copier/: check_generated.py  copy_utils.py
src/extraction_review/: clients.py  config.py  export_types.py  process_file.py  (+1 more)
test-proj/: .copier-answers.yml  .env.template  .gitignore  README.md  copier.yaml  llama_deploy.local  llama_deploy.yaml  pyproject.toml
test-proj/src/test_proj/: config.py  export_types.py  foo  process_file.py
test-proj/ui/: .gitignore  README.md  index.html  next.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
test-proj/ui/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
test-proj/ui/src/app/: layout.tsx  page.module.css  page.tsx
test-proj/ui/src/app/api/extracted-data/[...path]/: route.ts
test-proj/ui/src/app/item/[itemId]/: page.tsx
test-proj/ui/src/components/: analyze-invoice-file-workflow-button.tsx  workflow-trigger.tsx
test-proj/ui/src/lib/: ToolbarContext.tsx  client.ts  config.ts  data.ts
test-proj/ui/src/pages/: HomePage.module.css  HomePage.tsx  ItemPage.tsx
test-proj/ui/src/schemas/: InvoiceSchema.ts  LineItem.ts  MySchema.d.ts  MySchema.json
tests/: conftest.py  test_workflow.py
ui/: README.md.jinja  index.html  index.html.jinja  next.config.ts  package.json  package.json.jinja  vite.config.ts
workflow/: .env  .env.jinja  config.py  loop_files.py  process_file.py  pyproject.toml.jinja  schemas.py
workflows/: config.py  loop_files.py
(+27 files in other folders)
