[project]
name = "test-proj"
version = "0.1.0"
description = "Extracts data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-cloud-services>=0.6.53",
    "llama-index-workflows>=1.1.0",
    "python-dotenv>=1.1.0",
    "jsonref>=1.1.0",
    "click>=8.2.1",
    "httpx>=0.28.1",
]

[project.scripts]
export-types = "test_proj.export_types:export_types"

[dependency-groups]
dev = [
    "ruff>=0.11.10",
    "llama_deploy",
    "typescript>=0.0.12",
    "ty>=0.0.1a16",
    "pytest>=8.4.1",
    "hatch>=1.14.1",
]

[tool.uv.sources]
llama-deploy = { git = "https://github.com/run-llama/llama_deploy", rev = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.default.scripts]
format = "ruff format ."
lint = [
    "ruff check .",
    "ty check src"
]
test = "pytest"
all = [
    "format",
    "lint",
    "test"
]
